# LuaGGML

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  lua_ggml.c  lua_ggml_support.h
.github/workflows/: ci.yml
examples/: gpt2.lua
tests/: test.lua
tools/: gen_lua_bindings.py
